update todo.txt, comment some important lines out in logic for testing

--- a/todo.txt
+++ b/todo.txt
@@ -1,28 +1,28 @@
-[x] levels/CAVE/SunCavern.py
-[x] levels/CAVE/MoonCavern.py
-[x] levels/CAVE/LostleafLobby.py
-[ ] levels/CAVE/ArmadaLobby.py
+[x] data/levels/CAVE/SunCavern.py
+[x] data/levels/CAVE/MoonCavern.py
+[x] data/levels/CAVE/LostleafLobby.py
+[ ] data/levels/CAVE/ArmadaLobby.py
   [x] pass through with apple
   [x] pass through with bubble conch
   [x] pass through with shelnerts fish
   [ ] pass through with mr kerringtons wings
     * you do not need wing jump tech to get to the egg platform
-[ ] levels/CAVE/PalaceLobby.py
+[ ] data/levels/CAVE/PalaceLobby.py
   [ ] pass through with apple
   [ ] pass through with bubble conch
   [ ] pass through with shelnerts fish
   [ ] pass through with mr kerringtons wings
-[ ] levels/CAVE/GalleryLobby.py
+[ ] data/levels/CAVE/GalleryLobby.py
   [ ] pass through with apple
   [ ] pass through with bubble conch
   [ ] pass through with shelnerts fish
   [ ] pass through with mr kerringtons wings
-[ ] levels/CAVE/Sewer.py
+[ ] data/levels/CAVE/Sewer.py
   [ ] pass through with apple
   [ ] pass through with bubble conch
   [ ] pass through with shelnerts fish
   [ ] pass through with mr kerringtons wings
-[ ] levels/CAVE/Rainbow.py
+[ ] data/levels/CAVE/Rainbow.py
   [ ] pass through with apple
   [ ] pass through with bubble conch
   [ ] pass through with shelnerts fish
