--- a/todo.txt
+++ b/todo.txt
@@ -1,28 +1,29 @@
-[x] data/levels/CAVE/SunCavern.py
-[x] data/levels/CAVE/MoonCavern.py
-[x] data/levels/CAVE/LostleafLobby.py
-[ ] data/levels/CAVE/ArmadaLobby.py
+[x] levels/CAVE/SunCavern.py
+[x] levels/CAVE/MoonCavern.py
+[x] levels/CAVE/LostleafLobby.py
+[ ] levels/CAVE/ArmadaLobby.py
   [x] pass through with apple
   [x] pass through with bubble conch
   [x] pass through with shelnerts fish
   [ ] pass through with mr kerringtons wings
     * you do not need wing jump tech to get to the egg platform
-[ ] data/levels/CAVE/PalaceLobby.py
+  [ ] finish logic for JesterBootsPlatform
+[ ] levels/CAVE/PalaceLobby.py
   [ ] pass through with apple
   [ ] pass through with bubble conch
   [ ] pass through with shelnerts fish
   [ ] pass through with mr kerringtons wings
-[ ] data/levels/CAVE/GalleryLobby.py
+[ ] levels/CAVE/GalleryLobby.py
   [ ] pass through with apple
   [ ] pass through with bubble conch
   [ ] pass through with shelnerts fish
   [ ] pass through with mr kerringtons wings
-[ ] data/levels/CAVE/Sewer.py
+[ ] levels/CAVE/Sewer.py
   [ ] pass through with apple
   [ ] pass through with bubble conch
   [ ] pass through with shelnerts fish
   [ ] pass through with mr kerringtons wings
-[ ] data/levels/CAVE/Rainbow.py
+[ ] levels/CAVE/Rainbow.py
   [ ] pass through with apple
   [ ] pass through with bubble conch
   [ ] pass through with shelnerts fish
