fleshing out some more logic

--- a/todo.txt
+++ b/todo.txt
@@ -1,20 +1,20 @@
 [x] levels/CAVE/SunCavern.py
 [x] levels/CAVE/MoonCavern.py
 [x] levels/CAVE/LostleafLobby.py
-[ ] levels/CAVE/ArmadaLobby.py
+[x] levels/CAVE/ArmadaLobby.py
   [x] pass through with apple
   [x] pass through with bubble conch
   [x] pass through with shelnerts fish
-  [ ] pass through with mr kerringtons wings
+  [x] pass through with mr kerringtons wings
     * you do not need wing jump tech to get to the egg platform
-  [ ] finish logic for JesterBootsPlatform
-[ ] levels/CAVE/PalaceLobby.py
-  [ ] pass through with apple
-  [ ] pass through with bubble conch
-  [ ] pass through with shelnerts fish
-  [ ] pass through with mr kerringtons wings
+  [x] finish logic for JesterBootsPlatform
+[x] levels/CAVE/PalaceLobby.py
+  [x] pass through with apple
+  [x] pass through with bubble conch
+  [x] pass through with shelnerts fish
+  [x] pass through with mr kerringtons wings
 [ ] levels/CAVE/GalleryLobby.py
-  [ ] pass through with apple
+  [x] pass through with apple
   [ ] pass through with bubble conch
   [ ] pass through with shelnerts fish
   [ ] pass through with mr kerringtons wings
