finish sewer (and mark gallery lobby as done)

--- a/todo.txt
+++ b/todo.txt
@@ -13,16 +13,16 @@
   [x] pass through with bubble conch
   [x] pass through with shelnerts fish
   [x] pass through with mr kerringtons wings
-[ ] levels/CAVE/GalleryLobby.py
+[x] levels/CAVE/GalleryLobby.py
   [x] pass through with apple
-  [ ] pass through with bubble conch
-  [ ] pass through with shelnerts fish
-  [ ] pass through with mr kerringtons wings
-[ ] levels/CAVE/Sewer.py
-  [ ] pass through with apple
-  [ ] pass through with bubble conch
-  [ ] pass through with shelnerts fish
-  [ ] pass through with mr kerringtons wings
+  [x] pass through with bubble conch
+  [x] pass through with shelnerts fish
+  [x] pass through with mr kerringtons wings
+[x] levels/CAVE/Sewer.py
+  [x] pass through with apple
+  [x] pass through with bubble conch
+  [x] pass through with shelnerts fish
+  [x] pass through with mr kerringtons wings
 [ ] levels/CAVE/Rainbow.py
   [ ] pass through with apple
   [ ] pass through with bubble conch
