--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,9 @@
 [x] levels/CAVE/GalleryLobby.py
 [x] levels/CAVE/Sewer.py
 [x] levels/CAVE/Rainbow.py
+[ ] levels/LAKE/LostleafLake.py
+  [ ] fully lay out regions and locations
+  [ ] pass through with apple
+  [ ] pass through with bubble conch
+  [ ] pass through with shelnerts fish
+  [ ] pass through with mr kerringtons wings
